# glits

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
CMakeModules/: Findepoxy.cmake
glits/: glits.hpp
src/glits/: glits.cpp
tests/: CMakeLists.txt
tests/glits/: testimage.cpp  x11window.cpp  x11window.hpp
